--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,6 +1,7 @@
 mountpoints:
   /:
-    url: "https://author-p130360-e1272151.adobeaemcloud.com/bin/franklin.delivery/adobe-rnd/aem-boilerplate-xcom/main"
+    url: "https://author-p185019-e1936672.adobeaemcloud.com/bin/franklin.delivery/woutervangeluwe/techinsiders14-citisignal-aem-accs/main"
     type: "markup"
     suffix: ".html"
-  
+folders:
+  /products/: /products/default 
